--- a/interim-report/Files/Chapter3.tex
+++ b/interim-report/Files/Chapter3.tex
@@ -656,7 +656,7 @@ The decoupling of the microcontroller and the program to be hosted on the deskto
 \begin{center}
 	\begin{figure}[H]
 	\centering
-	\includegraphics[width=0.7\linewidth]{Figures/Fig14}
+	\includegraphics[width=0.7\linewidth]{Figures/Flow}
 	\caption[Control Algorithm]{Control Algorithm for the Stewart Platform with Force Measurement}
 	\end{figure}
 \end{center}
