--- a/interim-report/Files/Chapter3.tex
+++ b/interim-report/Files/Chapter3.tex
@@ -122,9 +122,9 @@ platform must have a corresponding fixed position.
 %u_{6}^{T} & (R_{P}^{B}q_{6}^{B} * u_{6})^T
 %\end{bmatrix}
 %\]
-\section{Base and Moving Platform}
+\subsection{Base and Moving Platform}
  The Stewart platform should be stable. Thus the base should have a larger diameter than that of the moving platform. The Center of Gravity (COG) shouldn't fall outside the base during any of the platform movements.
- \section{Stewart Platform Configurations}
+ \subsection{Stewart Platform Configurations}
 Stewart platforms can take three primary configurations i.e. 3-3 type, 3-6 type or 6-6 type.
 \begin{center}
 	\begin{figure}[H]
@@ -139,7 +139,7 @@ The base and the platform (for the 3-3 type), and the platform (for the 3-6 type
 
 Thus a 6-6 type platform is considered. The base and platform are hexagon in shape.
 
-\section{Quality Index $(\lambda)$ of Stewart Platform Design}
+\subsection{Quality Index $(\lambda)$ of Stewart Platform Design}
 Quality index $(\lambda)$ varies from 0 to 1.\\
 Where,\\
 0 - design with singularities and\\
@@ -259,7 +259,7 @@ Due to cost constraints and for the Stewart platform's overall weight (and witho
 	\end{figure}
 \end{center}
 Aluminium, unlike mild steel, would not require post-processing methods (e.g. powder coating) which would add on the cost.
-\section{Sensing Bars/Rods}
+\subsection{Sensing Bars/Rods}
 Two options can be considered:
 \begin{itemize}
 \item Bars with square cross-section
@@ -320,7 +320,7 @@ If solid rods are used, strain gauges of high sensitivity should be used.
 	\end{figure}
 \end{center}
 
-\section{Test Flange and Strut}
+\subsection{Test Flange and Strut}
 The test flange will be used to hold the strut during wind tunnel testing. For optimum results, the reference axis is taken to be in the middle of the middle platform \cite {fernandes_design_nodate}. The flange will be fastened to the moving platform by use of bolts and nuts. Fasteners are more economical and easy to achieve as compared to welding. M6 or M8 nuts cab be used for this purpose.
 
 The test flange should hold the strut for a considerable length in order to keep the rotation of the strut below certain predefined values and thus limiting torsion and bending behaviour of the strut during Wind Tunnel testing.
@@ -340,7 +340,7 @@ The strut will go into the test section of the Wind tunnel at the Fluids lab in 
 	\end{figure}
 \end{center}
 
-\section{Spherical Joints}
+\subsection{Spherical Joints}
 For the 6-6 type, both platforms have six vertices and
 the connections between the sensing bars and the platforms is made by simple spherical joints. Single spherical joints are preferable because they are easy to manufacture and they eliminate the issues of interference between sensing bars when double spherical joints are used \cite{fernandes_design_nodate}.  
 
@@ -390,55 +390,17 @@ The Spherical joint was done on Autodesk Inventor and included in the Stewart Pl
 	\caption[Spherical Joint CAD]{Spherical Joint as designed on Autodesk Inventor}
 	\end{figure}
 \end{center}
-
-\section{Electromechanical Design}
-Two methods of actuation are popular with Stewart platforms:
-\begin{itemize}
-\item Linear actuators
-\item Use of motors
-\end{itemize}
-Whereas linear actuators are relatively easy to control, they are very expensive. Thus the choice of motors.
-%\subsection{Servo Horn}
-%This will provide the connection between the motor and the spherical joints hence the aluminium rods. An 8mm hole on one end for mounting the spherical joint and another hole 8.5mm that will allow coupling with the servo arm bush of 8.6mm. The 1mm gap ensure tight fitting.
+\subsection{Finite Element Analysis}
+A Finite Element Analysis was done on the Stewart platform design to determine its performance under given loads. The platform is going to be subjected to a force during wind tunnel testing. A maximum load of 50N is selected for the Finite Element Analysis. This could be more or less since models vary in size. The z-component of the force is considered.
 %\begin{center}
-%	\begin{figure}[!h]
-%	\centering
-%	\includegraphics[width=0.6\linewidth]{Figures/Horn}
-%	\caption{Servo horn}
-%	\end{figure}
+	%\begin{figure}[!htb]
+	%\centering
+	%\includegraphics[width=0.75\linewidth]{Figures/Von}
+	%\caption[Von Mise's Stress]{Von Mise's Stress}
+	%\end{figure}
 %\end{center}
-
-\subsection{Motor Selection}
-One parameter was considered in our motor selection i.e. torque required. From the Autodesk Inventor design environment, the mass of the moving platform and mechanical couplings was 2.6kg. Each motor is supposed to move a minimum mass of 0.177kg. Using a servo horn of distance 45mm centre-to-centre, and Distance = $ \pi $ D, then:
-\begin{equation}
-Torque = (0.1777 \times 9.81)\times \frac{141.37}{1000} = 0.246 N\cdot m
-\end{equation}
-Motors of minimum torque of 0.2 N $\cdot m$ were considered. But for control considerations, only stepper motors and servo motors were shortlisted. Servo motor was considered over Stepper motor because they are cheaper. Also, we are only interested in 0 - 180 degrees positions.
-
-The Servo motor \textbf{TowerPro SG5010} is suitable for this project. The specifications provided by the manufacturer are as follows:
-
-\begin{table}[!h]
-\caption[Motor Specifications]{TowerPro SG5010 Specifications}
-\end{table}
-\begin{center}
-\begin{tabular}{|l|l|}
-\hline
-\textbf{Model}& TowerPro SG5010\\
-\hline
-\textbf{Operating Voltage} & 4.8V - 6.6V\\
-\hline
-\textbf{Operating Speed @ 4.8V} & 0.20sec/60$^{\circ}$\\
-\hline
-\textbf{Operating Speed @ 6.6V}& 0.16sec/60$^{\circ}$\\
-\hline
-\textbf{Stall torque @ 4.8V} & 5.5 kg-cm or 0.54 N $\cdot$ m\\
-\hline
-\textbf{Stall torque @ 6.6V} & 6.5 kg-cm or 0.64 N $\cdot$ m\\
-\hline
-\end{tabular}
-\end{center}
-Prices range between \textbf{Ksh.700} and \textbf{Ksh.1400}
-\section{Inverse Kinematics of a Stewart Platform}
+The rods/legs of the Stewart platform are subjected to axial forces which cause slight strains which can be used to obtain force and moment measurements during wind tunnel testing.
+\subsection{Inverse Kinematics of a Stewart Platform}
 This is the calculation of each leg length based on the desired position of the Stewart platform. 
 For the Stewart platform, the translation $^{p}T_{b}$ from the base origin to the platform origin can be described with a single vector T = $(t_{x} t_{y} t_{z})^{T} $. The rotation of the platform can be denoted as $^{p}R_{b}$. Thus the following relationship for the frame of reference can be stated:
 $$^{p}T_{b} = T$$
@@ -516,16 +478,53 @@ $$e_{k} = 2hl_{k}^{(z)} $$
 $$e_{k} = 2h(cos(\beta_{k})I_{k}^{(x)}+sin({\beta_{k}})I_{k}^(y))$$
 $$g_{k} = l_{k}^2 - (d^2 - h^2)   $$
 
-\section{Finite Element Analysis}
-A Finite Element Analysis was done on the Stewart platform design to determine its performance under given loads. The platform is going to be subjected to a force during wind tunnel testing. A maximum load of 50N is selected for the Finite Element Analysis. This could be more or less since models vary in size. The z-component of the force is considered.
+\section{Electromechanical Design}
+Two methods of actuation are popular with Stewart platforms:
+\begin{itemize}
+\item Linear actuators
+\item Use of motors
+\end{itemize}
+Whereas linear actuators are relatively easy to control, they are very expensive. Thus the choice of motors.
+%\subsection{Servo Horn}
+%This will provide the connection between the motor and the spherical joints hence the aluminium rods. An 8mm hole on one end for mounting the spherical joint and another hole 8.5mm that will allow coupling with the servo arm bush of 8.6mm. The 1mm gap ensure tight fitting.
 %\begin{center}
-	%\begin{figure}[!htb]
-	%\centering
-	%\includegraphics[width=0.75\linewidth]{Figures/Von}
-	%\caption[Von Mise's Stress]{Von Mise's Stress}
-	%\end{figure}
+%	\begin{figure}[!h]
+%	\centering
+%	\includegraphics[width=0.6\linewidth]{Figures/Horn}
+%	\caption{Servo horn}
+%	\end{figure}
 %\end{center}
-The rods/legs of the Stewart platform are subjected to axial forces which cause slight strains which can be used to obtain force and moment measurements during wind tunnel testing.
+
+\subsection{Motor Selection}
+One parameter was considered in our motor selection i.e. torque required. From the Autodesk Inventor design environment, the mass of the moving platform and mechanical couplings was 2.6kg. Each motor is supposed to move a minimum mass of 0.177kg. Using a servo horn of distance 45mm centre-to-centre, and Distance = $ \pi $ D, then:
+\begin{equation}
+Torque = (0.1777 \times 9.81)\times \frac{141.37}{1000} = 0.246 N\cdot m
+\end{equation}
+Motors of minimum torque of 0.2 N $\cdot m$ were considered. But for control considerations, only stepper motors and servo motors were shortlisted. Servo motor was considered over Stepper motor because they are cheaper. Also, we are only interested in 0 - 180 degrees positions.
+
+The Servo motor \textbf{TowerPro SG5010} is suitable for this project. The specifications provided by the manufacturer are as follows:
+
+\begin{table}[!h]
+\caption[Motor Specifications]{TowerPro SG5010 Specifications}
+\end{table}
+\begin{center}
+\begin{tabular}{|l|l|}
+\hline
+\textbf{Model}& TowerPro SG5010\\
+\hline
+\textbf{Operating Voltage} & 4.8V - 6.6V\\
+\hline
+\textbf{Operating Speed @ 4.8V} & 0.20sec/60$^{\circ}$\\
+\hline
+\textbf{Operating Speed @ 6.6V}& 0.16sec/60$^{\circ}$\\
+\hline
+\textbf{Stall torque @ 4.8V} & 5.5 kg-cm or 0.54 N $\cdot$ m\\
+\hline
+\textbf{Stall torque @ 6.6V} & 6.5 kg-cm or 0.64 N $\cdot$ m\\
+\hline
+\end{tabular}
+\end{center}
+Prices range between \textbf{Ksh.700} and \textbf{Ksh.1400}
 
 \section{Design of the Force Sensor}
 The force sensor module will be used to measure the force and moments from the aerodynamic loads applied on model being tested in the wind tunnel. The forces to be measured are the drag, lift and thrust as well as associated moments. For this subsystem two possible conceptual designs are to be considered:
@@ -639,7 +638,7 @@ Module communicates to the microcontroller using a TTL to RS485. Each module is 
 \end{figure}
 \end{center}
 
-\section{Design of Human Machine Interface}
+\section{Control - Design of Human Machine Interface}
 The purpose of the interface is to enable control of the platform position as well as to obtain measured data from the strain gauges and pitot tubes. 
 The general layout is as shown in the figure below:
 \begin{center}
@@ -650,9 +649,10 @@ The general layout is as shown in the figure below:
 \end{figure}
 \end{center}
 
-The primary interface between the microcontroller is wirelessly via web sockets utilizing the User Datagram Protocol (UDP) interface. This allows for high speed low latency communication without need for a wired connection. It also allows for bidirectional transfer of information thus allowing for both control input and output of measured values. The interface is to enable the abstraction of data acquisition and actuator control to a simple interaction with buttons and other visual interfaces available in a computer program.
+The primary interface between the microcontroller is wireless via web sockets utilizing the User Datagram Protocol (UDP) interface. This allows for high speed low latency communication without need for a wired connection. It also allows for bidirectional transfer of information thus allowing for both control input and output of measured values. The interface is to enable the abstraction of data acquisition and actuator control to a simple interaction with buttons and other visual interfaces available in a computer program.
 
 The decoupling of the microcontroller and the program to be hosted on the desktop allows for advanced data processing such as application of filters and resolving measurements into usable information. It also allows for the use of more powerful processor and high level programming languages to more effectively perform complex calculations without taking a toll the sensor sampling rate that would occur with on board processing in the microcontroller.
+\subsection{Control Algorithm}
 \begin{center}
 	\begin{figure}[H]
 	\centering
