--- a/interim-report/Bib/References.bib
+++ b/interim-report/Bib/References.bib
@@ -485,3 +485,10 @@ Socket Joint, 47mm x 47.5mm},
   school={University of Zagreb. Faculty of Transport and Traffic Sciences. Division of~…}
 }
 
+@misc{Eisele_2019, 
+   title={Inverse Kinematics of a Stewart Platform}, 
+   url={https://www.xarg.org/paper/inverse-kinematics-of-a-stewart-platform/}, 
+   author={Eisele, Robert}, 
+   year={2019}, 
+   month={Feb}
+}
