Updated Summary of Gaps

--- a/interim-report/Bib/References.bib
+++ b/interim-report/Bib/References.bib
@@ -492,3 +492,11 @@ Socket Joint, 47mm x 47.5mm},
    year={2019}, 
    month={Feb}
 }
+
+@online{TEC,
+  author = {Tecquipment},
+  title = {{Tecquipment} Aerodynamics lab at East African School of Aviation},
+  year = 2022,
+  url = {https://www.tecquipment.com},
+  urldate = {10-Apr-2012}
+}
