List of symbols and nomenclature updated

--- a/interim-report/Files/Chapter3.tex
+++ b/interim-report/Files/Chapter3.tex
@@ -213,10 +213,10 @@ Metal used to manufacture the base should be of significant thickness to provide
 Metal used to manufacture the moving platform should be lightweight and of enough thickness to enable it to withstand significant loads.
 
 Some sheet metal materials are considered and compared.
+
+\begin{center}
 \begin{table}[!h]
 	\caption[Sheet Metal Properties]{Material Properties}
-\end{table}
-\begin{center}
 \centering
 \begin{tabular}{|l|l|l|}
 \hline
@@ -229,6 +229,7 @@ Mild Steel & 7.85 & 250\\
 Stainless Steel & 7.5 - 8.0 & 215\\
 \hline
 \end{tabular}
+\end{table}
 \end{center}
 Aluminium 6061 is preferable for the moving platform since it is lightweight and can withstand significant loads without yielding. It also has good machinability (50 per cent). A sheet metal of 1.5mm thickness is used for the platform.
 \begin{center}
@@ -270,7 +271,7 @@ Cylindrical bars are preferable due to their ease of coupling with the available
 From inquiries around suppliers in the Kenyan Market, these bars are usually available in steel and aluminium. In order to select the optimum solution for our application, the Yield Strength, modulus of rigidity, Young's Modulus and density of both materials will be considered. 
 \begin{table}[!h]
 \caption[Aluminium and Steel Properties]{Material Properties of Aluminium and Steel}
-\end{table}
+
 
 \begin{tabular}{|l|l|l|l|l|}
 \hline
@@ -281,6 +282,7 @@ Steel & 240 & 79 & 190 - 215 & 7.8\\
 Aluminium & 270 & 26 & 69 - 70 & 2.7\\
 \hline
 \end{tabular}
+\end{table}
 
 E - Young's Modulus\\
 G - Modulus of Rigidity
@@ -418,6 +420,9 @@ The leg length $l_{k}$ can therefore be found with:
 \begin{equation}
 l_{k} = P_{k} - B_{k} = T + R \times p \times R^{-1} - b_{k}
 \end{equation}
+Where,\\
+$P_{k}$ - leg attachment on platform \\
+$B_{k}$- leg attachment on base 
 \subsection{Inverse Kinematics Using Rotational Servo Motors}
 For a rod of fixed length d between servo horn anchor $H_{k}$ and platform anchor $P_{k}$.  $H_{k}$ has a distance h between the original base anchor and servo shaft $B_{k}$. The vector h is perpendicular to the servo shaft and is rotated by angle $\alpha_{k}$ when lifted from the horizontal line.
 \begin{center}
