--- a/interim-report/Files/Nomenclature.tex
+++ b/interim-report/Files/Nomenclature.tex
@@ -1,29 +1,46 @@
 \paragraph{Nomenclature}
 \begin{itemize}
-\item $\vec{b}_i$ - position of ith connection point at base with respect to B
+\item A - Cross-section area
+\item a - Diameter of moving 
+\item b - Diameter of base
 \item B - coordinate system defined at centre of base plate
 \item COG - Center of Gravity
-\item DAQA - Data Acquisition System
+\item d - length of rod
+\item DAQ/DAQA - Data Acquisition System
 \item DOF - Degrees of Freedom
-\item UDP - User Datagram Protocol
+\item E - Young's Modulus
+\item G - Modulus of rigidity
+\item EASA - East Africa School of Aviation
 \item ELB - Engineering Laboratory Building
-\item $\vec{F}_e$ - external force applied to platform
-\item $f_i$ - force exerted on ith leg due $F_e, M_e$
-\item $F$ - vector of leg forces
+\item F - Axial Force
 \item FEA - Finite Element Analysis
 \item $H$ - transformation matrix which related measured forces and applied forces
-\item HMI - Human Machine Interface
-\item $\hat{I}_i$ - Unit vector along the ith leg 
+\item h - height between base plate and moving platform
+\item HMI - Human Machine Interface 
 \item I2C - Inter-Integrated Circuit 
 \item J - Jacobian Matrix 
 \item JKUAT - Jomo Kenyatta University of Agriculture and Technology
-\item $\vec{M}_e$ - external moment applied to platform
 \item NASA - National Space Agency
 \item RS - Recommended Standard
-\item $\hat{{S_{i}}}$ - unit vector of the Plucker coordinates
 \item SCL - Serial Clock
 \item SDA - Serial Data
 \item SPI - Serial Peripheral Interface
 \item TTL - Transistor-Transistor Logic
+\item UDP - User Datagram Protocol
 \end{itemize}
 \pagebreak
+%\paragraph{List of Symbols
+%\begin{itemize}
+%\item $\vec{b}_i$ - position of ith connection point at base with respect to B
+%\item $\vec{F}_e$ - external force applied to platform
+%\item $f_i$ - force exerted on ith leg due $F_e, M_e$
+%\item $F$ - vector of leg forces
+%\item $\hat{I}_i$ - Unit vector along the ith leg
+%\item $\vec{M}_e$ - external moment applied to platform
+%\item $\hat{{S_{i}}}$ - unit vector of the Plucker coordinates
+%\item $\alpha$ - Angle of attack
+%\item $\beta$ - Side slip angle
+%\item $|J|$ - determinant of Jacobian matrix
+%\item $|J|_{m}$ - determinant of Jacobian matrix of optimal Stewart PLatform configuration
+%\item $\lambda$ - Quaity index
+%\end{itemize}}
