--- a/interim-report/Main_file.tex
+++ b/interim-report/Main_file.tex
@@ -150,6 +150,10 @@
 \input{Files/Nomenclature}
 \clearpage
 \newpage
+\addcontentsline{toc}{section}{List of Abbreviations}
+\input{Files/Symbols}
+\clearpage
+\newpage
 
 \newpage
 \pagenumbering{arabic}
