--- a/interim-report/Files/Chapter3.tex
+++ b/interim-report/Files/Chapter3.tex
@@ -207,16 +207,17 @@ Quality index for this Stewart Platform design is therefore,
 $$\lambda = \frac{|J|}{|J|_{m}} = 0.86$$
 %\label{eq:myeqn}
 %A quality index of 0.86 presents a design of high quality and mechanical feasibility.
-\subsection{Sheet Metal Thickness and Material Selection}
+\subsection{Sheet Metal Thickness and Material}
 Metal used to manufacture the base should be of significant thickness to provide more support to the whole structure.
 
 Metal used to manufacture the moving platform should be lightweight and of enough thickness to enable it to withstand significant loads.
 
-Some sheet metal materials are considered and compared.
+Some sheet metal materials are considered and compared in table \ref{table1}.
 
 \begin{center}
 \begin{table}[!h]
 	\caption[Sheet Metal Properties]{Material Properties}
+	\label{table1}
 \centering
 \begin{tabular}{|l|l|l|}
 \hline
@@ -268,7 +269,7 @@ Two options can be considered:
 \end{itemize}
 Cylindrical bars are preferable due to their ease of coupling with the available spherical joints. Cylindrical bars also guarantee uniform deformation of the bars - both in the axial and cross-sectional directions.
 
-From inquiries around suppliers in the Kenyan Market, these bars are usually available in steel and aluminium. In order to select the optimum solution for our application, the Yield Strength, modulus of rigidity, Young's Modulus and density of both materials will be considered. 
+From inquiries around suppliers in the Kenyan Market, these bars are usually available in steel and aluminium. In order to select the optimum solution for this application, the Yield Strength, modulus of rigidity, Young's Modulus and density of both materials are considered. 
 \begin{table}[!h]
 \caption[Aluminium and Steel Properties]{Material Properties of Aluminium and Steel}
 
@@ -323,7 +324,7 @@ If solid rods are used, strain gauges of high sensitivity should be used.
 \end{center}
 
 \subsection{Test Flange and Strut}
-The test flange will be used to hold the strut during wind tunnel testing. For optimum results, the reference axis is taken to be in the middle of the middle platform \cite {fernandes_design_nodate}. The flange will be fastened to the moving platform by use of bolts and nuts. Fasteners are more economical and easy to achieve as compared to welding. M6 or M8 nuts cab be used for this purpose.
+The test flange will be used to hold the strut during wind tunnel testing. For optimum results, the reference axis is taken to be in the middle of the middle platform \cite {fernandes_design_nodate}. The flange will be fastened to the moving platform by use of bolts and nuts. Fasteners are more economical and easy to achieve as compared to welding. M6 or M8 nuts can be used for this purpose.
 
 The test flange should hold the strut for a considerable length in order to keep the rotation of the strut below certain predefined values and thus limiting torsion and bending behaviour of the strut during Wind Tunnel testing.
 \begin{center}
@@ -355,7 +356,7 @@ Spherical joints can be obtained from online stores. One such store is RS Compon
 \item Ball and socket joint M8
 \item Ball and socket joint M10
 \end{itemize}
-Based on the diameter of the available aluminium rods, Ball and socket joint M10 is selected.
+Based on the diameter of the available aluminium rods, Ball and socket joint M10 is used.
 \begin{center}
 	\begin{figure}[H]
 	\centering
@@ -402,6 +403,35 @@ A Finite Element Analysis was done on the Stewart platform design to determine i
 	%\end{figure}
 %\end{center}
 The rods/legs of the Stewart platform are subjected to axial forces which cause slight strains which can be used to obtain force and moment measurements during wind tunnel testing.
+\begin{center}
+\begin{table}[!h]
+\caption{FEA Setup}
+\centering
+\end{table}
+\begin{tabular}{|l|l|}
+\hline
+\textbf{Input parameter} & \textbf{Value}\\
+\hline
+Force z-direction & 50N\\
+\hline
+Force y-direction & 0 N\\
+\hline
+Force x-direction & 0 N\\
+\hline
+Materials & Aluminium 6061\\
+ & Stainless steel\\
+\hline
+Constraints & Fixed constraint of the base\\
+\hline
+Contacts & All bonded\\
+\hline
+Mesh& Avg element size: 0.1mm\\
+& Minimum element size: 0.2mm\\
+& Grading Factor: 1.50\\
+& Maximum turn angle: 60 deg\\
+\hline
+\end{tabular}
+\end{center}
 \subsection{Inverse Kinematics of a Stewart Platform}
 This is the calculation of each leg length based on the desired position of the Stewart platform. 
 For the Stewart platform, the translation $^{p}T_{b}$ from the base origin to the platform origin can be described with a single vector T = $(t_{x} t_{y} t_{z})^{T} $. The rotation of the platform can be denoted as $^{p}R_{b}$. Thus the following relationship for the frame of reference can be stated \cite{Eisele_2019}:
@@ -531,13 +561,13 @@ The Servo motor \textbf{TowerPro SG5010} is suitable for this project. The speci
 \end{center}
 Prices range between \textbf{Ksh.700} and \textbf{Ksh.1400}
 
-\subsection{Design of the Force Sensor}
+\section{Design of the Force Sensor}
 The force sensor module will be used to measure the force and moments from the aerodynamic loads applied on model being tested in the wind tunnel. The forces to be measured are the drag, lift and thrust as well as associated moments. For this subsystem two possible conceptual designs are to be considered:
 \begin{itemize}
 \item External force sensor
 \item Stewart Platform as a force sensor
 \end{itemize}
-\subsubsection*{External Force Sensor}
+\section{External Force Sensor}
 In this case it would require at least 3 orthogonally positioned load cells measuring each force component. Each load cell would be mechanically linked to the model such that forces experienced on each axis are measured by each load cell. 
 \begin{center}
 	\begin{figure}[H]
@@ -547,7 +577,7 @@ In this case it would require at least 3 orthogonally positioned load cells meas
 	\end{figure}
 \end{center}
 This configuration is, however, bulky since it requires an additional external system for force measurements in addition to the Stewart platform for positioning the model. This is however complemented by the simplicity in calibration of the load cells and does not require a complex force transformation matrix and other issues with force amplification created by the use of an integrated system.
-\subsubsection*{Stewart Platform as a force sensor}
+\subsection{Stewart Platform as a force sensor}
 In this configuration the Stewart platform legs are used as force sensors by attaching strain gauges on the legs of platform. Similar work has been done by \cite{ferreira2015design} without the use of actuators as is proposed in this project. Using the Stewart platform as a force sensor requires the actuators to be locked with zero degrees of freedom.
 
 Four strain gauges are required for each leg for a full Wheatstone bridge configuration. 
@@ -615,8 +645,8 @@ where $(M_e)_x$, $(M_e)_y$ and $(M_e)_z$ are the external moments on the platfor
 $$
 \end{equation}
 
-
-\subsection{Velocity Measurement}
+ 
+\section{Velocity Measurement}
 An important part in wind tunnel measurements is the measure of pressure at specific points in the wind tunnel and computing the corresponding air speed. This is achieved by the use of a pitot probe. 
 \begin{center}
 \begin{figure}[H]
@@ -634,28 +664,26 @@ For steady flow of an incompressible fluid for which viscosity can be neglected,
 Where V is the speed of the fluid, P0 is the total, also called the stagnation, pressure at that point of measurement, and p is the static pressure at the same point.
 
 Three pitot probes are to be used in the wind tunnel i.e. in the test section, intake and diffuser sections.
-
-Module communicates to the microcontroller using a TTL to RS485. Each module is individually addressable further simplifying the interface as shown in figure \ref{fig:rs485}:
+                                                                                                                                                                   
+Module communicates to the microcontroller using a TTL to RS485. Each module is individually addressable further simplifying the interface as shown in figure 3.9.2:
 \begin{center}
 \begin{figure}[H]
 \centering
 \includegraphics{Figures/modbus}
-\caption[RS485 communication]{RS485 communication}
 \label{fig:rs485}
+mmunication]{RS485 communication}
 \end{figure}
 \end{center}
 
-\section{Control system}
-This section deals with the control of the stewart platform. It involves allowing input and obtaining output form the platform force balance.
-\subsection{Human Machine Interface}
+\section{Control - Design of Human Machine Interface}
 The purpose of the interface is to enable control of the platform position as well as to obtain measured data from the strain gauges and pitot tubes. 
-The general layout is as shown in the figure \ref{fig:hmi}:
+The general layout is as shown in the figure below:
 \begin{center}
 \begin{figure}[H]
 \centering
-\includegraphics{Figures/Interface}
-\caption[Human Machine Interface]{Human Machine Interface}
 \label{fig:hmi}
+s{Figures/Interface}
+\caption[Human Machine Interface]{Human Machine Interface}
 \end{figure}
 \end{center}
 
@@ -667,12 +695,11 @@ The decoupling of the microcontroller and the program to be hosted on the deskto
 	\begin{figure}[H]
 	\centering
 	\includegraphics[width=0.7\linewidth]{Figures/Flow}
-	\caption[Control Algorithm]{Control Algorithm for the Stewart Platform with Force Measurement}
-	\end{figure}
+	\caption[Control algorithm]{Control Algorithm for the Stewart Platform force balance}
+         %equired electrical connections to make the system functional and interface with the control unit.
+     \end{figure}
 \end{center}
-\section{Electrical Design}
-This section looks at the required electrical connections to make the system functional and interface with the control unit.
-\subsection{Printed Circuit Board Design}
+\section{Printed Circuit Board Design}
 This section looks at the design of the circuits used to power and get readings from the sensors and control the actuators.
 
 \subsection{Microcontroller}
