--- a/interim-report/Files/Symbols.tex
+++ b/interim-report/Files/Symbols.tex
@@ -25,7 +25,8 @@
 \item $R_{z}$ - rotation about z-axis
 \item $\sigma$ - Stress
 \item $^{p}T_{b}$ - translation from the base origin to the platform origin
-\item $(t_{x} t_{y} t_{z})^{T} $ -  translations in the x, y and z directions
-
+\item $t_{x}$ -  translation in the x direction
+\item $t_{y}$ -  translation in the y direction
+\item $t_{z} $ -  translations in the z direction
 \end{itemize}
 \pagebreak
