--- a/interim-report/Files/Abstract.tex
+++ b/interim-report/Files/Abstract.tex
@@ -12,7 +12,7 @@ Modelling and simulation of the kinematics of the Stewart platform was done usin
 The human machine interface dashboard was also created to allow interaction with the platform. The printed circuit board to be used was also designed using Easy EDA. Three dimensional models of the platform were created using Autodesk Inventor to show the configuration allowing for six degrees of freedom which was verified by the simulation on MATLAB.
 
 Finally, models will be developed and tested in a wind tunnel to evaluate the performance
-of the platform. The force balance and platform should be able to position the test
+of the platform. The platform should be able to position the test
 item and measure aerodynamic loads while pitot tubes will be used to measure air velocity. Data logging of the obtained measurements will be done using a bespoke computer program for further analysis.
 
 
