--- a/interim-report/Files/Introduction.tex
+++ b/interim-report/Files/Introduction.tex
@@ -9,7 +9,7 @@ in the wind tunnel.
 A Stewart platform is a six degree-of-freedom mechanism that consists of a base and a platform connected with six legs that can vary in length. Each leg of the Stewart platform is connected to the ground by a two-axis joint and is provided with controllable means for extending its length
 \cite{wittenburg2016stewart}. The six DOF Stewart Platform provides an elegant design for simulating flight conditions.\cite{stewart1965platform}. 
 
-The Stewart platform can be used in conjunction with wind tunnels for wind tunnel testing. Wind tunnels are used to measure the aerodynamic forces on airplanes, wings, cars, trucks, bridges, and buildings. This can be done by mounting models of these vehicles on the tunnel's mounting sting. The Stewart platform can provide various dynamic positions to simulate complex vehicle maneuvers. A force balance is incorporated to take direct measurement of forces and torques acting on the model that is being tested in the wind tunnel.
+The Stewart platform can be used in conjunction with wind tunnels for wind tunnel testing. Wind tunnels are used to measure the aerodynamic forces on airplanes, wings, cars, trucks, bridges, and buildings. This can be done by positioning models of these vehicles in the tunnel's test section. The Stewart platform can provide various dynamic positions to simulate complex vehicle maneuvers. A force balance is incorporated to take direct measurement of forces and torques acting on the model that is being tested in the wind tunnel.
 
 For this project, the force balance is intended to be built as simple and accessible as possible. Thus, use of a six DOF Stewart Platform as a force balance. A Stewart Platform has already been designed and fabricated by a previous group but is not integrated with a force balance. Electrical load measurement devices have to be connected to the legs of the Stewart platform in order to measure and obtain the results and so making it fully operational.
 
