--- a/interim-report/Main_file.tex
+++ b/interim-report/Main_file.tex
@@ -150,7 +150,7 @@
 \input{Files/Nomenclature}
 \clearpage
 \newpage
-\addcontentsline{toc}{section}{List of Abbreviations}
+\addcontentsline{toc}{section}{List of Symbols}
 \input{Files/Symbols}
 \clearpage
 \newpage
