--- a/interim-report/Files/Introduction.tex
+++ b/interim-report/Files/Introduction.tex
@@ -16,7 +16,7 @@ For this project, the force balance is intended to be built as simple and access
 \section{Problem Environment}
 Simulation and analysis of scaled models is an important step in the development of aircraft, vehicles and other machines. Such analysis provides aerodynamic performance data that can be used to inform any modifications or improvements e.g. in aircraft and vehicles to make them more efficient and safer. One such method that is used to perform aerodynamic performance evaluation is the wind tunnel used in conjunction with sensors for data acquisition by a computer. External or internal six-component force balances are also used. Another such technology that can be used for this purpose is the Stewart platform, which can be used to predict behaviour of vehicles and aircraft in the actual environment.
 
-Whereas the wind tunnel gives very accurate results, it is expensive to build and use. Also, some objects require complex maneuver simulations to imitate the actual movements in air. There is therefore the need for dynamic positioning of objects in the wind tunnel.
+Whereas the force balances give very accurate results, some are expensive to build and use. Also, some objects require complex maneuver simulations to imitate the actual movements in air. There is therefore the need for dynamic positioning of objects in the wind tunnel.
 \section{Problem Statement}
  The development of a six DOF Stewart Platform force balance to stand as a simple and economical alternative to the existing commercial solutions is presented. The Stewart platform force balance should be able to measure lift, drag and pitching moment in small models and will be used with a generic low speed wind tunnel which is already available at the Engineering Fluids LAB in JKUAT.
 \section{Objectives}
